--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="resume">
         <div class="container">
           <div class="resume__block">
-            <h1 class="contact-info__header">John Smith</h1>
+            <h1 class="contact-info__header">Tim Leobert E. Villacin</h1>
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
 
             <div class="contact_info_container fh">
@@ -31,14 +31,31 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>Lviv, Ukraine</span>
+                  <span>Cebu, Philippines</span>
+                </a>
+                <a href="" rel="author" class="contact-info__item">
+                  <div class="contact-info__item-icon-wrapper">
+                    <svg
+                      class="contact-info__item-icon"
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 384 512"
+                    >
+                      <path
+                        d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0
+                          192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
+                          13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
+                          80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
+                      ></path>
+                    </svg>
+                  </div>
+                  <span>timleo.vil@gmail.com</span>
                 </a>
               </div>
 
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.png"
+                  src="assets/tlev-profile-photo.jpg"
                   alt="Avatar"
                 />
               </div>
@@ -66,7 +83,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>binary-studio</span>
+                  <span>Tim Leobert Villacin</span>
                 </a>
               </div>
             </div>
