--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Résumé</title>
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      src="https://kit.fontawesome.com/d041497b4c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main>
