--- a/index.html
+++ b/index.html
@@ -37,22 +37,40 @@
                   </div>
                   <span>Cebu, Philippines</span>
                 </a>
-                <a href="" rel="author" class="contact-info__item">
+                <a
+                  href="mailto:timleovil@gmail.com"
+                  rel="author"
+                  class="contact-info__item"
+                >
                   <div class="contact-info__item-icon-wrapper">
-                    <svg
-                      class="contact-info__item-icon"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 384 512"
-                    >
-                      <path
-                        d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0
-                          192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
-                          13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
-                          80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
-                      ></path>
-                    </svg>
+                    <i class="fa-solid fa-envelope"></i>
                   </div>
                   <span>timleo.vil@gmail.com</span>
+                </a>
+                <a
+                  href="https://discord.com/"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-brands fa-discord"></i>
+                  </div>
+                  <span>dev_tlev</span>
+                </a>
+                <a
+                  href="https://www.codewars.com/users/TLEV6500"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <img
+                      src="assets/codewars-svgrepo-com.svg"
+                      alt="codewars logo"
+                      width="20"
+                      height="20"
+                    />
+                  </div>
+                  <span>TLEV6500</span>
                 </a>
               </div>
 
@@ -66,7 +84,7 @@
 
               <div class="contact-info__block">
                 <a
-                  href="https://ua.linkedin.com/company/binary-studio_241166"
+                  href="https://www.linkedin.com/in/tim-leobert-villacin-2484b0226/"
                   rel="author"
                   class="contact-info__item"
                 >
@@ -88,6 +106,36 @@
                     </svg>
                   </div>
                   <span>Tim Leobert Villacin</span>
+                </a>
+                <a
+                  href="https://x.com/TimLeoVil"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                  </div>
+                  <span>@TimLeoVil</span>
+                </a>
+                <a
+                  href="https://www.facebook.com/villacin.tim"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-brands fa-square-facebook"></i>
+                  </div>
+                  <span>@villacin.tim</span>
+                </a>
+                <a
+                  href="https://www.instagram.com/timmmmmv/"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-brands fa-square-instagram"></i>
+                  </div>
+                  <span>@timmmmmv</span>
                 </a>
               </div>
             </div>
