+ Added skills, experience, education, and language content

--- a/index.html
+++ b/index.html
@@ -162,10 +162,11 @@
                 </svg>
               </div>
               <p class="intro_text">
-                I'm John, a software developer driven by innovation and
-                problem-solving. With a strong background in computer science,
-                I'm dedicated to pushing boundaries and crafting elegant
-                solutions through code.
+                I am Tim Leobert E. Villacin (call me Tim), from the
+                Philippines. I am obsessed with learning, and I have set my eyes
+                on Computer Science and Software Engineering, and I love 'em. My
+                determination to deliver worthy solutions makes me a shiny asset
+                to add to your toolbox. I also love fries, pastries, and coffee.
               </p>
             </div>
           </div>
@@ -175,7 +176,8 @@
             <div class="skills">
               <h3 class="skills__header">Skills</h3>
               <p class="skills__text">
-                Problem solving, Continuous Learning, Team Collaboration
+                Problem solving, Programming, Visualization, Planning, Future
+                thinking, Data structures and algorithms
               </p>
             </div>
           </div>
@@ -188,56 +190,165 @@
                 <div class="experiences__company">
                   <div class="experiences__company-header">
                     <span class="experiences__company-header-durability"
-                      >2005-Present</span
+                      >2022-present</span
                     >
-                    <h3 class="experiences__company-header-name">
-                      Binary Studio
-                    </h3>
+                    <h3 class="experiences__company-header-name">Personal</h3>
                   </div>
 
                   <div class="experiences__company-project">
                     <span class="experiences__company-project-role"
                       >Full-Stack Developer</span
                     >
+                    <h3 class="experiences__company-project-name">WhatsaDB</h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Frontend Development</li>
+                      <li>Backend Architecture</li>
+                      <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Full-Stack Developer</span
+                    >
                     <h3 class="experiences__company-project-name">
-                      Binary Studio Website
+                      Tim's Computer Science Journey (Codebase)
                     </h3>
                     <ul class="experiences__company-project-responsibilities">
+                      <li>Frontend Development</li>
                       <li>Backend Architecture</li>
+                      <li>Content writer</li>
+                      <li>UI/UX</li>
+                      <li>Quality Assurance</li>
+                      <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Full-Stack Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      Data Visualization of Twitter Trends
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
                       <li>Frontend Development</li>
                       <li>API Integration</li>
                       <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Full-Stack Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      User Registration
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Frontend Development</li>
+                      <li>Backend Development</li>
+                      <li>UI/UX</li>
+                      <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability"
+                      >2024</span
+                    >
+                    <h3 class="experiences__company-header-name">
+                      HOLDALWAYSWINS
+                    </h3>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Wordpress and Web3 Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      Liquidity Provisions
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Frontend Development</li>
+                      <li>Smart Contract Integration</li>
+                      <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Wordpress Developer and Designer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      HOLDALWAYSWINS Website
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Frontend Development</li>
+                      <li>API Integration</li>
+                      <li>Code Maintenance</li>
+                      <li>UI/UX</li>
                     </ul>
                   </div>
                 </div>
               </div>
 
               <div class="additional-info fv">
-                <div class="additional-info fv">
-                  <div class="additional-info__education">
-                    <h3 class="additional-info__education-header">Education</h3>
-                    <div class="additional-info__education-university">
-                      <span
-                        class="additional-info__education-university-durability"
-                      >
-                        2021
-                      </span>
-                      <h3
-                        class="additional-info__education-university-speciality"
-                      >
-                        Full-Stack Development
-                      </h3>
-                      <p class="additional-info__education-university-name">
-                        Binary Studio Academy
-                      </p>
-                    </div>
+                <div class="additional-info__education">
+                  <h3 class="additional-info__education-header">Education</h3>
+                  <div class="additional-info__education-university">
+                    <span
+                      class="additional-info__education-university-durability"
+                    >
+                      2025 (ongoing)
+                    </span>
+                    <h3
+                      class="additional-info__education-university-speciality"
+                    >
+                      Web3 and Blockchain Development
+                    </h3>
+                    <p class="additional-info__education-university-name">
+                      The Blocklabs Academy
+                    </p>
                   </div>
+                  <div class="additional-info__education-university">
+                    <span
+                      class="additional-info__education-university-durability"
+                    >
+                      2023-2025 (Unfinished)
+                    </span>
+                    <h3
+                      class="additional-info__education-university-speciality"
+                    >
+                      Computer Science
+                    </h3>
+                    <p class="additional-info__education-university-name">
+                      Cebu Institute of Technology - University
+                    </p>
+                  </div>
+                  <div class="additional-info__education-university">
+                    <span
+                      class="additional-info__education-university-durability"
+                    >
+                      2020-2022 (Unfinished)
+                    </span>
+                    <h3
+                      class="additional-info__education-university-speciality"
+                    >
+                      Mechanical Engineering
+                    </h3>
+                    <p class="additional-info__education-university-name">
+                      Cebu Institute of Technology - University
+                    </p>
+                  </div>
+                </div>
 
-                  <div class="additional-info__languages">
-                    <h3 class="additional-info__languages-header">Languages</h3>
-                    <p class="additional-info__languages-item">English</p>
-                    <p class="additional-info__languages-item">Ukrainian</p>
-                  </div>
+                <div class="additional-info__languages">
+                  <h3 class="additional-info__languages-header">Languages</h3>
+                  <p class="additional-info__languages-item">English</p>
+                  <p class="additional-info__languages-item">
+                    Filipino-Tagalog
+                  </p>
+                  <p class="additional-info__languages-item">
+                    Filipino-Cebuano
+                  </p>
                 </div>
               </div>
             </div>
