+ Added jokes section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/d041497b4c.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
     <main>
@@ -349,6 +350,13 @@
                   <p class="additional-info__languages-item">
                     Filipino-Cebuano
                   </p>
+                </div>
+                <div class="additional-info__jokes">
+                  <h3 class="additional-info__jokes-header">
+                    Wanna here some jokes?
+                  </h3>
+                  <button id="show_joke_btn">Yes</button>
+                  <p id="additional-info__jokes-body"></p>
                 </div>
               </div>
             </div>
