+ Update index.html - Typo on jokes header

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 </div>
                 <div class="additional-info__jokes">
                   <h3 class="additional-info__jokes-header">
-                    Wanna here some jokes?
+                    Wanna "hear" some jokes?
                   </h3>
                   <button id="show_joke_btn">Yes</button>
                   <p id="additional-info__jokes-body"></p>
